--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     datasource:
         #    driverClassName: org.postgresql.Driver
         driverClassName: ${DB_DRIVERCLASSNAME:com.p6spy.engine.spy.P6SpyDriver}
-        url: ${DB_URL:jdbc:p6spy:postgresql://localhost:5432/db}
+        url: ${DB_URL:jdbc:p6spy:postgresql://localhost:5432/vkadapter}
         username: ${DB_USERNAME:postgres}
         password: ${DB_PASSWORD:postgres}
         hikari:
